--- a/Flutter/app/src/main/AndroidManifest.xml
+++ b/Flutter/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.main.login.LoginActivity"></activity>
+        <activity android:name=".ui.main.feed.HashtagFeedActivity"></activity>
+        <activity android:name=".ui.main.login.LoginActivity" />
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
