--- a/Flutter/app/src/main/AndroidManifest.xml
+++ b/Flutter/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Utils.BlueBird"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,10 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.main.personlist.PersonListActivity"></activity>
-        <activity
-            android:name=".ui.main.personlist.UserListActivity"
-            android:label="@string/title_activity_user_list"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.main.status.StatusViewActivity" />
         <activity android:name=".ui.main.story.UserStoryActivity" />
         <activity android:name=".ui.main.feed.HashtagFeedActivity" />
