--- a/Flutter/app/src/main/AndroidManifest.xml
+++ b/Flutter/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:name=".Utils.BlueBird"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_flutter_bird"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
