--- a/Flutter/app/build.gradle
+++ b/Flutter/app/build.gradle
@@ -43,11 +43,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.27.0-eap13'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.amazonaws:aws-java-sdk-api-gateway:1.11.664'
+    implementation 'com.amazonaws:aws-android-sdk-apigateway-core:2.15.+'
 }
