--- a/Flutter/app/src/main/AndroidManifest.xml
+++ b/Flutter/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".Utils.BlueBird"
+        android:name=".utils.BlueBird"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_flutter_bird"
