--- a/Flutter/app/build.gradle
+++ b/Flutter/app/build.gradle
@@ -34,6 +34,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.kittinunf.fuel:fuel:2.2.1'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.1'
+    implementation 'com.github.kittinunf.fuel:fuel-gson:2.2.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
