--- a/Flutter/app/build.gradle
+++ b/Flutter/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.amazonaws:aws-android-sdk-apigateway-core:2.15.+'
+//    implementation 'com.amazonaws:aws-android-sdk-core-2.2.8'
+    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.3.8'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.9.1'
 }
